--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -36,3 +36,12 @@ view {
   font-size: 30rpx;
   color: #666;
 }
+.panel {
+  margin: 10rpx 0;
+  padding: 10rpx 0;
+  background: $white;
+  .title {
+    padding-left: 20rpx;
+    border-left: 10rpx solid red;
+  }
+}
