--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -11,3 +11,12 @@ $dark:                #000;
 $blue:                #0084FF;
 
 $danger:              #FF4040;
+
+$size14:              14rpx;
+$size20:              20rpx;
+$size24:              24rpx;
+$size30:              30rpx;
+
+@function rpx($rpx) {
+  @return $rpx * 1rpx ;
+}
