--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -12,9 +12,12 @@ $blue:                #0084FF;
 
 $danger:              #FF4040;
 
+$activeRed:           #ff6a3c;
+
 $size14:              14rpx;
 $size20:              20rpx;
 $size24:              24rpx;
+$size28:              28rpx;
 $size30:              30rpx;
 
 @function rpx($rpx) {
